resiliency/proxy/proxy-envoy.json
{
  "admin": {
    "access_log_path": "/dev/null",
    "address": "tcp://0.0.0.0:8001"
  },

  "listeners": [
    {
      "address": "tcp://0.0.0.0:80",
      "filters": [
        {
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "egress_http",
            "access_log": [
              {
                "path": "/tmp/envoy-traffic"
              }
            ],
            "generate_request_id": true,
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "services",
                  "domains": ["*"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/skyview/1",
                      "auto_host_rewrite": true,
                      "cluster": "skyview1"
                    },
                    {
                      "timeout_ms": 0,
                      "prefix": "/skyview/2",
                      "cluster": "skyview2"
                    }
                  ]
                }
              ]
            },
            "filters": [
              {
                "name": "fault",
                "config": {
                  "abort": {
                    "abort_percent": 25,
                    "http_status": 405
                  },
                  "upstream_cluster":"skyview1"
                }
              },
              {
                "name": "fault",
                "config": {
                  "delay": {
                    "type" : "fixed",
                    "fixed_delay_percent" : 50,
                    "fixed_duration_ms" : 1500
                  },
                  "upstream_cluster":"skyview2"
                }
              },
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    }
  ],

  "cluster_manager": {
    "clusters": [
      {
        "name": "skyview1",
        "connect_timeout_ms": 2500,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "features": "http2",
        "hosts": [
          {
            "url": "tcp://skyview:80"
          }
        ]
      },
      {
        "name": "skyview2",
        "connect_timeout_ms": 250,
        "type": "strict_dns",
        "lb_type": "round_robin",
        "hosts": [
          {
            "url": "tcp://0.0.0.0:80"
          }
        ],
        "circuit_breakers": {
          "default": {
            "max_connections": 1,
            "max_pending_requests": 1,
            "max_retries": 3
          }
        },
        "outlier_detection" : {
          "consecutive_5xx": 5,
          "max_ejection_percent": 100,
          "interval_ms": 3000
        }
      }
    ]
  }
}
