resiliency/proxy/proxy-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: local_proxy
          http_filters:
          - name: envoy.fault
            config:
              abort:
                percent: 10
                http_status: 531
          - name: envoy.fault
            config:
              delay:
                type: fixed
                percent: 50
                fixed_delay: 9s
          - name: envoy.router
            config: {}
  clusters:
  - name: local_proxy
    connect_timeout: 10s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: airports
        port_value: 80
    - socket_address:
        address: filtered
        port_value: 80
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
